--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,5 @@
     },
     "python.formatting.provider": "yapf",
     "python.pythonPath": "/usr/bin/python3",
-    "C_Cpp.clang_format_fallbackStyle": "BasedOnStyle: Google, UseTab: Never, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Custom, AllowShortIfStatementsOnASingleLine: true, AllowShortFunctionsOnASingleLine: All, AllowShortBlocksOnASingleLine: true"
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, UseTab: Never, IndentWidth: 4, TabWidth: 4, BreakBeforeBraces: Custom, AllowShortIfStatementsOnASingleLine: true, AllowShortFunctionsOnASingleLine: All, AllowShortBlocksOnASingleLine: true}"
 }
