--- a/.gitignore
+++ b/.gitignore
@@ -6,41 +6,8 @@
 # Unignore file.cpp
 !*.py
 
+# Unignore file.pdf
+!*.pdf
+
 # Unignore all dirs
 !*/
-
-# Unignore config
-!config/*
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
